...
            modifier = Modifier.weight(1f),
            horizontalArrangement = Arrangement.spacedBy(10.dp),
            verticalAlignment = Alignment.CenterVertically,
        ) {
            IconCircleButton(
                icon = MapMateIconType.Back,
                contentDescription = "뒤로",
                onClick = onBackClick,
                containerColor = Color.Transparent,
                contentColor = MaterialTheme.colorScheme.primary,
            )
            Text(
                text = title,
...
